--- a/.github/workflows/celastriel-build.yml
+++ b/.github/workflows/celastriel-build.yml
@@ -35,5 +35,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4.3.0
       with:
         branch: gh-pages # The branch the action should deploy to.
-        folder: out # The folder the action should deploy.
+        folder: build # The folder the action should deploy.
 
