--- a/.github/workflows/celastriel-build.yml
+++ b/.github/workflows/celastriel-build.yml
@@ -28,12 +28,12 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build 
-    - run: npm run start
+    - run: npm run export
 
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4.3.0
       with:
         branch: gh-pages # The branch the action should deploy to.
-        folder: build # The folder the action should deploy.
+        folder: out # The folder the action should deploy.
 
