--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export" : "next export",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.4.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
