--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "flowbite": "^1.4.3",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.6"
   },
   "devDependencies": {
